@@ -36,6 +36,7 @@
 * Priority: Update `add_purchases_data` to return if `options[:purchases]` is empty [drkjc] #4349
 * Stripe PI: update `shipping` field to `shipping_address` [ajawadmirza] #4347
 * DecidirPlus: Handle `payment_method_id` by `card_brand` [naashton] #4350
+* DecidirPlus: `debit` and `payment_method_id` fields [naashton] #4351
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
